--- a/sass/modules/_story.scss
+++ b/sass/modules/_story.scss
@@ -24,11 +24,11 @@ $status-private-color: color(lighter);
 $status-private-icon: lock;
 
 %story-status {
-  @include adjust-font-size-to($smallpx);
+  @include adjust-font-size-to($smallpx,1.25);
   @include border-radius(.25em);
   position: absolute;
-  top: 0;
-  left: 0;
+  top: rhythm(-.375);
+  right: rhythm(-.375);
   padding: 0 .5em;
   z-index: 900;
 }
@@ -49,7 +49,7 @@ $status-private-icon: lock;
 
 .story {
   @include pie-clearfix;
-  @include rhythm-margins;
+  @include rhythm-margins(2);
   position: relative;
 
   @include story-status-icon('hidden', $status-hidden-icon, $status-hidden-color);
@@ -73,7 +73,7 @@ $status-private-icon: lock;
 
 .story-body {
   @include trailer(.5);
-  @include rhythm-borders(2px,.5);
+  @include rhythm-borders(2px,1);
   @include border-radius(.25em);
   @include arrow(bottom rhythm(.25) rhythm(.5) $status-published-color);
   background: color(white, .75);
