--- a/templates/_add_story_form.html
+++ b/templates/_add_story_form.html
@@ -1,3 +1,4 @@
+{% load widget_tweaks %}
 <form id="add-story-form" class="add-story-form" method="POST">
   {% csrf_token %}
   {% include "forms/errors.html" with errors=form.non_field_errors %}
@@ -6,7 +7,12 @@
   {% include "forms/formfield.html" with field=form.body label="Story" help_text=help_text %}
   {% endwith %}
 
-  {% include "forms/formfield.html" with field=form.private label="Keep this story private" %}
+  {% if user == teacher.user %}
+    {% include "forms/formfield.html" with field=form.submitter_name label="From" help_text="Who sent you this story? (First name only)." %}
+    {% include "forms/formfield.html" with field=form.nominal_date label="Date" help_text="When did you receive this story? (MM/DD/YYYY)"%}
+  {% else %}
+    {% include "forms/formfield.html" with field=form.private label="Keep this story private" %}
+  {% endif %}
 
   <div class="form-actions">
     <button class="primary-action" type="submit" name="submit">Send</button>
