--- a/static/css/styleguide.css
+++ b/static/css/styleguide.css
@@ -56,56 +56,56 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 
 @font-face {
   font-family: "CambridgeRound";
-  src: url('../fonts/cambridge_round-webfont.woff?1342738619') format("woff"), url('../fonts/cambridge_round-webfont.ttf?1358363476') format("truetype");
+  src: url('../fonts/cambridge_round-webfont.woff?1366318814') format("woff"), url('../fonts/cambridge_round-webfont.ttf?1366318814') format("truetype");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: "CambridgeRound";
-  src: url('../fonts/cambridge_round_bold-webfont.woff?1342738619') format("woff"), url('../fonts/cambridge_round_bold-webfont.ttf?1358363476') format("truetype");
+  src: url('../fonts/cambridge_round_bold-webfont.woff?1366318814') format("woff"), url('../fonts/cambridge_round_bold-webfont.ttf?1366318814') format("truetype");
   font-weight: bold;
   font-style: normal;
 }
 
 @font-face {
   font-family: "CambridgeRound";
-  src: url('../fonts/cambridge_round_it-webfont.woff?1342738619') format("woff"), url('../fonts/cambridge_round_it-webfont.ttf?1358363477') format("truetype");
+  src: url('../fonts/cambridge_round_it-webfont.woff?1366318814') format("woff"), url('../fonts/cambridge_round_it-webfont.ttf?1366318814') format("truetype");
   font-weight: normal;
   font-style: italic;
 }
 
 @font-face {
   font-family: "CambridgeRoundCond";
-  src: url('../fonts/cambridge_round_cond-webfont.woff?1351286140') format("woff"), url('../fonts/cambridge_round_cond-webfont.ttf?1358363477') format("truetype");
+  src: url('../fonts/cambridge_round_cond-webfont.woff?1366318814') format("woff"), url('../fonts/cambridge_round_cond-webfont.ttf?1366318814') format("truetype");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: "CambridgeRoundCond";
-  src: url('../fonts/cambridge_round_bold_cond-webfont.woff?1351286140') format("woff"), url('../fonts/cambridge_round_bold_cond-webfont.ttf?1358363476') format("truetype");
+  src: url('../fonts/cambridge_round_bold_cond-webfont.woff?1366318814') format("woff"), url('../fonts/cambridge_round_bold_cond-webfont.ttf?1366318814') format("truetype");
   font-weight: bold;
   font-style: normal;
 }
 
 @font-face {
   font-family: "CambridgeRoundCond";
-  src: url('../fonts/cambridge_round_cond_it-webfont.woff?1351286140') format("woff"), url('../fonts/cambridge_round_cond_it-webfont.ttf?1358363477') format("truetype");
+  src: url('../fonts/cambridge_round_cond_it-webfont.woff?1366318814') format("woff"), url('../fonts/cambridge_round_cond_it-webfont.ttf?1366318814') format("truetype");
   font-weight: normal;
   font-style: italic;
 }
 
 @font-face {
   font-family: "SquareSerif";
-  src: url('../fonts/SquareSerif-Book-webfont.woff?1342738619') format("woff"), url('../fonts/SquareSerif-Book-webfont.ttf?1358363476') format("truetype");
+  src: url('../fonts/SquareSerif-Book-webfont.woff?1366318814') format("woff"), url('../fonts/SquareSerif-Book-webfont.ttf?1366318814') format("truetype");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: "SquareSerif";
-  src: url('../fonts/SquareSerif-Bold-webfont.woff?1342738619') format("woff"), url('../fonts/SquareSerif-Bold-webfont.ttf?1358363476') format("truetype");
+  src: url('../fonts/SquareSerif-Bold-webfont.woff?1366318814') format("woff"), url('../fonts/SquareSerif-Bold-webfont.ttf?1366318814') format("truetype");
   font-weight: bold;
   font-style: normal;
 }
@@ -202,7 +202,7 @@ a:focus, a:hover, a:active {
 
 @font-face {
   font-family: "knet";
-  src: url('../fonts/knet.woff?1370641551') format("woff"), url('../fonts/knet.ttf?1370641551') format("truetype");
+  src: url('../fonts/knet.woff?1370891808') format("woff"), url('../fonts/knet.ttf?1370891808') format("truetype");
   font-weight: normal;
   font-style: normal;
 }
@@ -795,7 +795,7 @@ select {
   height: 0;
   padding-top: 36.95833%;
   width: 100%;
-  background: url('../images/wordmark.svg?1369776473') no-repeat scroll top;
+  background: url('../images/wordmark.svg?1369780455') no-repeat scroll top;
   -webkit-background-size: 100% auto;
   -moz-background-size: 100% auto;
   -o-background-size: 100% auto;
@@ -1159,13 +1159,13 @@ select {
   margin-right: 1.27778rem;
 }
 
-.submitter_name-field, .submitter_email-field {
+.submitter_name-field, .nominal_date-field {
   width: 49.15254%;
   float: left;
   margin-right: 1.69492%;
 }
 
-.submitter_email-field {
+.nominal_date-field {
   float: right;
   margin-right: 0;
 }
