Add login-to-post link on teacher-detail

--- a/sass/modules/_add-story.scss
+++ b/sass/modules/_add-story.scss
@@ -26,7 +26,7 @@
   vertical-align: middle;
 }
 
-.toggle-addstory {
+%addstory-button {
   @extend %button-large;
   @include serif;
   @include adjust-font-size-to($largepx);
@@ -35,7 +35,10 @@
   cursor: pointer;
 
   #{$focus} { color: $accent; }
+}
 
+.toggle-addstory {
+  @extend %addstory-button;
   display: none;
 }
 
