--- a/sass/modules/_teacher-detail.scss
+++ b/sass/modules/_teacher-detail.scss
@@ -3,6 +3,11 @@
 
 .teacher-detail {
   position: relative;
+
+  .fb-login {
+    @extend %addstory-button;
+    display: block;
+  }
 }
 
 .teacher-info {
