--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -301,7 +301,7 @@ button {
   cursor: pointer;
 }
 
-.primary-action, .login .fb-login, .toggle-addstory {
+.primary-action, .login .fb-login, .teacher-detail .fb-login, .toggle-addstory {
   border-width: 1px;
   border-width: 0.05556rem;
   border-style: solid;
@@ -320,13 +320,13 @@ button {
   cursor: pointer;
 }
 
-.primary-action:hover, .login .fb-login:hover, .toggle-addstory:hover, .primary-action:focus, .login .fb-login:focus, .toggle-addstory:focus {
+.primary-action:hover, .login .fb-login:hover, .teacher-detail .fb-login:hover, .toggle-addstory:hover, .primary-action:focus, .login .fb-login:focus, .teacher-detail .fb-login:focus, .toggle-addstory:focus {
   -webkit-box-shadow: rgba(102, 189, 189, 0.25) 0 0 0.31944rem;
   -moz-box-shadow: rgba(102, 189, 189, 0.25) 0 0 0.31944rem;
   box-shadow: rgba(102, 189, 189, 0.25) 0 0 0.31944rem;
 }
 
-.primary-action:active, .login .fb-login:active, .toggle-addstory:active {
+.primary-action:active, .login .fb-login:active, .teacher-detail .fb-login:active, .toggle-addstory:active {
   -webkit-box-shadow: rgba(15, 15, 15, 0.5) 0 0 0.25rem inset;
   -moz-box-shadow: rgba(15, 15, 15, 0.5) 0 0 0.25rem inset;
   box-shadow: rgba(15, 15, 15, 0.5) 0 0 0.25rem inset;
@@ -350,7 +350,7 @@ button {
   content: " »";
 }
 
-.login .fb-login, .toggle-addstory {
+.login .fb-login, .teacher-detail .fb-login, .toggle-addstory {
   font-size: 32px;
   font-size: 1.77778rem;
   line-height: 46px;
@@ -1136,6 +1136,9 @@ select {
 .teacher-detail {
   position: relative;
 }
+.teacher-detail .fb-login {
+  display: block;
+}
 
 .teacher-info {
   margin-bottom: 23px;
@@ -1180,7 +1183,7 @@ select {
   vertical-align: middle;
 }
 
-.toggle-addstory {
+.teacher-detail .fb-login, .toggle-addstory {
   font-family: "SquareSerif", "Helvetica Neue", Arial, Helvetica, sans-serif;
   font-size: 32px;
   font-size: 1.77778rem;
@@ -1189,10 +1192,13 @@ select {
   color: #007474;
   text-align: center;
   cursor: pointer;
-  display: none;
 }
-.toggle-addstory:focus, .toggle-addstory:hover, .toggle-addstory:active {
+.teacher-detail .fb-login:focus, .toggle-addstory:focus, .teacher-detail .fb-login:hover, .toggle-addstory:hover, .teacher-detail .fb-login:active, .toggle-addstory:active {
   color: #94001a;
+}
+
+.toggle-addstory {
+  display: none;
 }
 
 [id="story-form-toggle"] {
