--- a/templates/teacher_detail.html
+++ b/templates/teacher_detail.html
@@ -1,6 +1,6 @@
 {% extends "base_site.html" %}
 
-{% load markup stories %}
+{% load markup stories accounts %}
 
 {% block main %}
 <article class="teacher-detail">
@@ -34,6 +34,14 @@
   </label>
 
   {% include "_add_story_form.html" %}
+
+  {% elif not user.is_authenticated %}
+  <a href="{% oauth_authorize_url request login_next|default:request.path %}" class="fb-login">
+    <span class="icon-addstory"></span>
+    <span class="text-addstory">
+      Login to thank {{ teacher }}
+    </span>
+  </a>
   {% endif %}
 
   {# Stories #}
