Remove unused data-width and data-heigh attributes on oembeds.

--- a/templates/micawber/base.html
+++ b/templates/micawber/base.html
@@ -1,4 +1,4 @@
-<figure class="oembed {{ response.provider_name|slugify }} {{ response.type }}-embed" data-width="{{ response.width }}" data-height="{{ response.height }}">
+<figure class="oembed {{ response.provider_name|slugify }} {{ response.type }}-embed">
 {% block oembed-html %}
 {% endblock %}
 </figure>
