--- a/templates/micawber/photo.html
+++ b/templates/micawber/photo.html
@@ -1,5 +1,5 @@
 {% extends "micawber/base.html" %}
 
 {% block oembed-html %}
-<a href="{{ response.url }}" title="{{ response.title }}"><img alt="{{ response.title }}" src="{{ response.url }}" /></a>
+<a href="{{ url }}" title="{{ response.title }}"><img alt="{{ response.title }}" src="{{ response.url }}" /></a>
 {% endblock %}
