--- a/templates/teacher_detail.html
+++ b/templates/teacher_detail.html
@@ -30,7 +30,7 @@
     <span class="icon-addstory"></span>
     <span class="text-addstory">
       {% if user == teacher.user %}
-        Post messages you've recieved elsewhere.
+        Post messages you've received elsewhere.
       {% else %}
         Tell us how {{ teacher }} changed your life.
       {% endif %}
