Pull out _teacher_info.html included template.

--- a/templates/teacher_detail.html
+++ b/templates/teacher_detail.html
@@ -6,22 +6,7 @@
 <article class="teacher-detail">
 
   {# Teacher Info #}
-  <header class="teacher-info">
-    <h1 class="teacher-name">{{ teacher }}</h1>
-
-    <ul class="teacher-data">
-      {% if teacher.school %}
-      <li class=" data-item school">
-        <span class="value">{{ teacher.school }}</span>
-      </li>
-      {% endif %}
-      <li class=" data-item membership">
-        <b class="type">Network Member Since</b>
-        <span class="value">{{ teacher.date_joined|date }}</span>
-      </li>
-    </ul>
-    <div class="teacher-bio">{{ teacher.bio|markdown }}</div>
-  </header>
+  {% include "_teacher_info.html" %}
 
   {# Story Form #}
   {% if user.is_authenticated %}
