--- a/sass/modules/_teacher-detail.scss
+++ b/sass/modules/_teacher-detail.scss
@@ -7,6 +7,8 @@
   .fb-login {
     @extend %addstory-button;
     display: block;
+
+    .icon-addstory { @include before($icon-facebook); }
   }
 }
 
