--- a/sass/modules/_story.scss
+++ b/sass/modules/_story.scss
@@ -17,6 +17,15 @@
 // Story
 // -----
 
+.story {
+  @include pie-clearfix;
+  @include rhythm-margins(2);
+  position: relative;
+}
+
+// Status
+// ------
+
 $status-published-color: $alt;
 $status-hidden-color: color($yellow lighter);
 $status-hidden-icon: eye-blocked;
@@ -24,6 +33,7 @@ $status-private-color: color(lighter);
 $status-private-icon: lock;
 
 %story-status {
+  @extend %has-tooltip;
   @include adjust-font-size-to($smallpx,1.25);
   @include border-radius(.25em);
   position: absolute;
@@ -38,25 +48,20 @@ $status-private-icon: lock;
   $icon,
   $color: $status-published-color
 ) {
-  &.#{$status} {
-    @include icon($icon) {
-      @extend %story-status;
-      background: $color;
-      color: contrast($color, white color(darkest));
-    }
+  .#{$status} & {
+    @extend %story-status;
+    background: $color;
+    color: contrast($color, white color(darkest));
+
+    @include icon($icon);
   }
 }
 
-.story {
-  @include pie-clearfix;
-  @include rhythm-margins(2);
-  position: relative;
-
+.status-icon {
   @include story-status-icon('hidden', $status-hidden-icon, $status-hidden-color);
   @include story-status-icon('private', $status-private-icon, $status-private-color);
   &.hidden.private { @include before($icon-lock); }
 }
-
 
 // Story Body
 // ----------
@@ -117,6 +122,7 @@ $status-private-icon: lock;
 }
 
 %story-action {
+  @extend %has-tooltip;
   padding: 0 rhythm(.25);
   color: color(light);
 }
@@ -131,7 +137,7 @@ $status-private-icon: lock;
 
 .story-status {
   @extend %story-action;
-  @include icon-replace(eye);
+  @include icon(eye);
 
   #{$focus} { color: $alt; }
 
@@ -143,7 +149,7 @@ $status-private-icon: lock;
 
 .delete-story {
   @extend %story-action;
-  @include icon-replace(remove);
+  @include icon(remove);
 
   #{$focus} { color: $red; }
 }
