--- a/sass/patterns/_tooltips.scss
+++ b/sass/patterns/_tooltips.scss
@@ -12,6 +12,8 @@ $tooltip-arrow-size: rhythm(.25);
   background: $tooltip-background;
   white-space: nowrap;
 
+  &[data-tooltip] { @include after(attr(data-tooltip)); }
+
   display: none;
 }
 
