--- a/static/css/landing.css
+++ b/static/css/landing.css
@@ -472,6 +472,9 @@ select {
   white-space: nowrap;
   display: none;
 }
+[data-tooltip].tooltip:after {
+  content: attr(data-tooltip);
+}
 
 .tooltip {
   bottom: 100%;
