--- a/static/css/demo.css
+++ b/static/css/demo.css
@@ -491,6 +491,9 @@ select {
   white-space: nowrap;
   display: none;
 }
+[data-tooltip].tooltip:after {
+  content: attr(data-tooltip);
+}
 
 .tooltip {
   bottom: 100%;
